test/files/neg/macro-invalidret-typemacros.check
Impls_Macros_1.scala:5: error: macro implementation has wrong shape:
 required: (c: scala.reflect.macros.Context): c.universe.Tree
 found   : (c: scala.reflect.macros.Context): c.universe.Expr[Int(2)]
type mismatch for return type: c.Expr[Int(2)] does not conform to c.universe.Tree
  type Foo = macro foo
                   ^
one error found
